hphp/hack/test/typecheck/finally_naming.php.exp
File "finally_naming.php", line 24, characters 10-11:
Variable $b is undefined, or there exists at least one control flow path reaching this point which does not define $b. (Naming[2050])
